tests/machine/x/c/user_type_literal.error
line: 0
error: cc error: exit status 1
/workspace/mochi/tests/machine/x/c/user_type_literal.c:28:3: error: conflicting types for ‘Person’; have ‘struct <anonymous>’
   28 | } Person;
      |   ^~~~~~
/workspace/mochi/tests/machine/x/c/user_type_literal.c:22:23: note: previous declaration of ‘Person’ with type ‘Person’
   22 | typedef struct Person Person;
      |                       ^~~~~~
/workspace/mochi/tests/machine/x/c/user_type_literal.c:33:3: error: conflicting types for ‘Book’; have ‘struct <anonymous>’
   33 | } Book;
      |   ^~~~
/workspace/mochi/tests/machine/x/c/user_type_literal.c:23:21: note: previous declaration of ‘Book’ with type ‘Book’
   23 | typedef struct Book Book;
      |                     ^~~~

   1: #include <stdio.h>
